gcc/testsuite/rust/rustc/ui/attribute-with-no-generics-in-parameter-list.rs
fn foo<#[attr]>() {} // { dg-error "" "" { target *-*-* } }

fn main() {}

